--- a/app/src/main/assets/about.html
+++ b/app/src/main/assets/about.html
@@ -13,6 +13,6 @@
             <h3>O aplikaciji</h3>
 			<p><strong>Verzija:</strong> 1.0</p>
 			<p><strong>Autor:</strong> Gold Deal d.o.o Development Team</p>
-			<p><strong>Web stranica projekta:</strong> <a href="https://mojtvz-android.tk">https://maskice.hr</a></p>
+			<p><strong>Web stranica projekta:</strong> <a href="https://maskice.hr">https://maskice.hr</a></p>
 </body>
 </html>
