About.html update
Added Changelog and some styling just for testing reasons ;)

--- a/app/src/main/assets/about.html
+++ b/app/src/main/assets/about.html
@@ -1,18 +1,49 @@
 <!DOCTYPE html>
 <html>
 <head>
-
     <meta charset="utf-8">
-
-
-
+    <title>maskice.hr Android Aplikacije</title>
+    <style type="text/css">
+    	body {
+    		margin: 0 auto;
+    		width: 80%;
+    	}
+    	img {
+    		width: 100%;
+    		height: auto;
+    	}
+    	.logo {
+    		width: 50%;
+    	}
+    </style>
 </head>
 <body>
-
-
-            <h3>O aplikaciji</h3>
-			<p><strong>Verzija:</strong> 1.0</p>
-			<p><strong>Autor:</strong> Gold Deal d.o.o Development Team</p>
-			<p><strong>Web stranica projekta:</strong> <a href="https://maskice.hr">https://maskice.hr</a></p>
+	<div class="logo">
+		<img src="logo.png">
+	</div>
+	<h3>O aplikaciji</h3>
+	<p><strong>Verzija:</strong> 1.2</p>
+	<p><strong>Autor:</strong> Gold Deal d.o.o Development Team</p>
+	<p><strong>Web stranica projekta:</strong> <a href="https://maskice.hr">https://maskice.hr</a></p>
+	<br>
+	<h3>Changelog</h3>
+	<h5>Verzija 1.2:</h5>
+	<ul>
+		<li>Dodana podrška za Adaptive Icons iz Android 8.0 Oreo</li>
+		<li>Još jedan hidden gem za code debuggere preko GitHub-a</li>
+	</ul>
+	<hr>
+	<h5>Verzija 1.1:</h5>
+	<ul>
+		<li>Bugfixevi</li>
+		<li>Dodana podrška za Android 8.0 Oreo Final Release</li>
+		<li>Dodan skriveni gem u source kodu za ljude koji vole kopati po istome preko GitHub-a</li>
+	</ul>
+	<hr>
+	<h5>Verzija 1.0:</h5>
+	<ul>
+		<li>Prvo izdanje aplikacije</li>
+		<li>Najniža podržana verzija Android OS - 5.0</li>
+	</ul>
 </body>
 </html>
