--- a/app/src/main/assets/about.html
+++ b/app/src/main/assets/about.html
@@ -22,11 +22,19 @@
 		<img src="logo.png">
 	</div>
 	<h3>O aplikaciji</h3>
-	<p><strong>Verzija:</strong> 1.2</p>
+	<p><strong>Verzija:</strong> 1.3</p>
 	<p><strong>Autor:</strong> Gold Deal d.o.o Development Team</p>
 	<p><strong>Web stranica projekta:</strong> <a href="https://maskice.hr">https://maskice.hr</a></p>
 	<br>
 	<h3>Changelog</h3>
+	<h5>Verzija 1.3:</h5>
+	<ul>
+		<li>Dodana podrška za Android 8.1</li>
+		<li>Bug fixevi</li>
+		<li>Poboljšana navigacija stranicom</li>
+		<li>Updatean kod za bolju podršku sa novijim uređajima sa 18:9 (2:1) Aspect Ratiom</li>
+	</ul>
+	<hr>
 	<h5>Verzija 1.2:</h5>
 	<ul>
 		<li>Dodana podrška za Adaptive Icons iz Android 8.0 Oreo</li>
