--- a/app/src/main/assets/about.html
+++ b/app/src/main/assets/about.html
@@ -27,6 +27,11 @@
 	<p><strong>Web stranica projekta:</strong> <a href="https://maskice.hr">https://maskice.hr</a></p>
 	<br>
 	<h3>Changelog</h3>
+	<h5>Verzija 1.4:</h5>
+	<ul>
+		<li>Dodana podrška za Android 8.1 Oreo</li>
+		<li>Optimizacija koda aplikacije, kao i ispravci bug fixeva</li>
+	</ul>
 	<h5>Verzija 1.3:</h5>
 	<ul>
 		<li>Bug fixevi</li>
