--- a/app/src/main/assets/about.html
+++ b/app/src/main/assets/about.html
@@ -22,21 +22,29 @@
 		<img src="logo.png">
 	</div>
 	<h3>O aplikaciji</h3>
-	<p><strong>Verzija:</strong> 1.5</p>
+	<p><strong>Verzija:</strong> 1.5.1</p>
 	<p><strong>Autor:</strong> Gold Deal d.o.o Development Team</p>
 	<p><strong>Web stranica projekta:</strong> <a href="https://maskice.hr">https://maskice.hr</a></p>
 	<br>
 	<h3>Changelog</h3>
+	<h5>Verzija 1.5.1:</h5>
+	<ul>
+		<li>Ispravak bugova i grešaka koji su nastali s posljednjim updateom</li>
+		<li>Mala reorganizacija navigacije (povezana s web shop promjenom)</li>
+	</ul>
+	<hr>
 	<h5>Verzija 1.5:</h5>
 	<ul>
 		<li>Optimizacija koda</li>
 		<li>Fix koji otvara web chat prozor izvan aplikacije</li>
 	</ul>
+	<hr>
 	<h5>Verzija 1.4:</h5>
 	<ul>
 		<li>Dodana podrška za Android 8.1 Oreo</li>
 		<li>Optimizacija koda aplikacije, kao i ispravci bug fixeva</li>
 	</ul>
+	<hr>
 	<h5>Verzija 1.3:</h5>
 	<ul>
 		<li>Bug fixevi</li>
